Logo e melhorias no Ambiente de desenvolvimento

--- a/app/assets/stylesheets/orca.css.scss
+++ b/app/assets/stylesheets/orca.css.scss
@@ -18,7 +18,7 @@
 }
 .topo{
 	.logo{
-		background: image-url("logo.png");
+		background: image-url("logot.png");
 		width: 354px;
 		height: 212px;
 		margin: 0px auto;
