Implementação do cloudnary e menu

--- a/app/assets/stylesheets/orca.css.scss
+++ b/app/assets/stylesheets/orca.css.scss
@@ -8,6 +8,10 @@
 	font-family: 'Lanenar', sans-serif;
 	font-weight: normal;
 }
+.ct{
+	margin-left: 15px;
+	margin-right: 15px;
+}
 .content{
 	width: 102%;
 }
