--- a/app/views/cias/new.html.erb
+++ b/app/views/cias/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/menu_topo' %>
 <div class="row">
 
 	<%= form_for @cia, url: cias_path, :html => { :multipart => true, :data => {:abide => ''} } do |f| %>
