--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   </head>
 
   <body>
-
+    <%= render 'layouts/menu_topo' %>
     <%= yield %>
     <%= javascript_include_tag "application" %>
+    <%= cloudinary_js_config %>
   </body>
 </html>
