--- a/app/views/orcas/index.html.erb
+++ b/app/views/orcas/index.html.erb
@@ -1,3 +1,5 @@
+
+<div class="ct">
 <h1>Lista de Orçamentos</h1>
 
 
@@ -37,3 +39,4 @@
 	</tbody>
 </table>
 	<%= link_to "Novo Orçamento", new_orca_path, :class => "button"%>
+</div>
