--- a/app/assets/stylesheets/orca.css.scss
+++ b/app/assets/stylesheets/orca.css.scss
@@ -12,6 +12,16 @@
 	margin-left: 15px;
 	margin-right: 15px;
 }
+.tp-menu{
+	background: #333333;
+}
+.tt{
+	h4{
+		text-transform: uppercase;
+		font-weight: 900;
+		font-size: 1.4rem;
+	}
+}
 .content{
 	width: 102%;
 }
