--- a/app/views/orcas/_form.html.erb
+++ b/app/views/orcas/_form.html.erb
@@ -161,7 +161,7 @@
     		<%= h.text_field :data_volta, class: "datepicker" %>
     	</div>
       <div class="small-3 columns left">
-          <%= h.hidden_field :foto %>
+          <%= h.hidden_field :foto, class: "foto_alvo" %>
           <%= cl_image_upload_tag('foto') %>
       </div>
 
