--- a/app/views/orcas/edit.html.erb
+++ b/app/views/orcas/edit.html.erb
@@ -1,7 +1,11 @@
 <div class="row">
 	<div class="lager-12 columns">
-		<h2>Edição</h2>
-		<h3><b>#<%= @orcamento.id %> <%= @orcamento.titulo %></b></h3>
+		<h3>
+			<b>
+				<i class="fa fa-pencil-square-o"></i>
+				<%= @orcamento.titulo %> #<%= @orcamento.id %>
+			</b>
+		</h3>
 	</div>
 </div>
 <%= render :partial => 'form' %>
