--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body>
     <%= render 'layouts/menu_topo' %>
+    <%= render 'orcas/login' %>
     <%= yield %>
     <%= javascript_include_tag "application" %>
     <%= cloudinary_js_config %>
