Sistema de Atendimento

--- a/app/assets/stylesheets/orca.css.scss
+++ b/app/assets/stylesheets/orca.css.scss
@@ -16,6 +16,17 @@
 	background: #333333;
 	margin-bottom: 12px;
 }
+.atendimento_obs {
+  height: 150px;
+}
+.ag-servicos{
+	margin-top: 20px;
+	ul.select2-choices{
+		li.select2-search-choice{
+			margin-top: 8px;
+		}
+	}
+}
 .tt{
 	h4{
 		text-transform: uppercase;
