--- a/app/views/layouts/_menu_topo.html.erb
+++ b/app/views/layouts/_menu_topo.html.erb
@@ -32,6 +32,7 @@
       <li class="has-dropdown">
         <a href="#">Atendimento</a>
         <ul class="dropdown">
+          <li> <%= link_to "Novo Atendimento", new_atendimento_path %> </li>
           <li><a href="#">Online</a></li>
           <li><a href="#">Telefone</a></li>
         </ul>
