--- a/app/views/atendimentos/_form.html.haml
+++ b/app/views/atendimentos/_form.html.haml
@@ -15,7 +15,7 @@
             = label_tag  "Nome Cliente"
             = f.text_field :cliente_id, class: 'b-nome', :required => '',:placeholder => 'Nome Completo'
           .large-3.columns.left
-            = label_tag :email
+            = label_tag "Email"
             = f.text_field :email,:placeholder => 'nome@email.com.br'
           .large-3.columns.left
             = label_tag  :telefone
