--- a/app/views/atendimentos/_cad_cliente.html.haml
+++ b/app/views/atendimentos/_cad_cliente.html.haml
@@ -7,7 +7,7 @@
         = f.text_field :nome, class: "cad-usuario", :required => '',:placeholder => 'Nome Completo'
       .large-3.columns.left
         = label_tag  "Sobrenome"
-        = f.text_field :sobrenome, :required => '',:placeholder => 'Sobrenome'
+        = f.text_field :sobrenome, class: "cad-snome", :required => '',:placeholder => 'Sobrenome'
       .large-3.columns.left
         = label_tag  "Email"
         = f.text_field :telefone, class: "cad-email", :required => '',:placeholder => 'email@provedor.com.br'
