--- a/app/views/atendimentos/_form.html.haml
+++ b/app/views/atendimentos/_form.html.haml
@@ -26,7 +26,7 @@
             = f.text_field :origem, class: 'b-aeroporto', :required => '', :placeholder => 'Origem'
           .large-3.columns.left
             = label_tag  :destino
-            = f.text_field :destino, :required => '', :placeholder => 'Destino'
+            = f.text_field :destino, class: 'b-aeroporto', :required => '', :placeholder => 'Destino'
           .large-3.columns.left
             = label_tag  :data_ida
             = f.text_field :data_ida, :required => '', :placeholder => 'DD/MM/AAAA'
