--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,34 @@
-<div class="section active home-bg">
-  <div class="topo">
-    <div class="logo"></div>
-    <div class="centro">
-    	<h1>A sua viagem começa aqui</h1>
-    	<p> Nós estamos aqui para ajudar você a realizar seus sonhos</p>
+<%= render :partial => "topo" %>
+<div class="section active">
+	
+	<div class="section-head">
+	  <div class="row">
+	    <div class="large-5 columns">
+	    <div class="s1">
+	      <h1>Viajar</h1>
+	      <p>
+	        É a única coisa  que
+	      </p>
+	      <p>
+	        Você compra e te faz mais Rico
+	      </p>
+	      </div>
+	    </div>
+	    <div class="large-5 large-offset-2 columns">
+	    	<div class="sp">
+		    	<h1>Atendimento</h1>
+		    	<p>atendimento@proximoembarque.com.br</p>
+		    	<p>(62) 3087-0404 | 88*6010-Rádio</p>
+	    	</div>
+	    </div>
+	  </div>
+	  <div class="sub-header">
+	  </div>
 	</div>
-  </div>
-
+	<div class="inicial">
+			<%= render :partial => "form" %>
+	</div>
 </div>
-<div class="section"></div>
+<div class="section home-bg"></div>
 <div class="section"></div>
 <div class="section"></div>
