--- a/app/views/home/_topo.html.erb
+++ b/app/views/home/_topo.html.erb
@@ -2,18 +2,18 @@
   <div class="row">
     <div class="large-5 medium-5 small-5 columns">
       <div class="nav-top">
-        <ul>
-          <li>
-            <a href="#" class="current">Inicio</a>
+        <ul id="menu">
+          <li class="active" data-menuanchor="home">
+            <a href="#home">Inicio</a>
           </li>
-          <li>
-            <a href="#">Serviços</a>
+          <li data-menuanchor="servicos">
+            <a href="#servicos">Serviços</a>
           </li>
-          <li>
-            <a href="#">Sobre-nós</a>
+          <li data-menuanchor="sobre-nos" >
+            <a href="#sobre-nos" >Sobre-nós</a>
           </li>
-          <li>
-            <a href="#">Blog</a>
+          <li data-menuanchor="blog">
+            <a href="#blog">Blog</a>
           </li>
         </ul>
       </div>
@@ -24,9 +24,9 @@
     </div>
     <div class="large-4 medium-4 small-4 columns">
       <div class="nav-top">
-        <ul>
-          <li>
-            <a href="#">Guias</a>
+        <ul id="menu">
+          <li data-menuanchor="guias">
+            <a href="#guias">Guias</a>
           </li>
           <li>
             <a href="#">Hoteis</a>
