--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,5 +30,8 @@
 	</div>
 </div>
 <div class="section home-bg"></div>
+<div class="section">
+	<h1>Titulo Sobre</h1>
+</div>
 <div class="section"></div>
 <div class="section"></div>
