--- a/app/assets/stylesheets/mkt/_topo.scss
+++ b/app/assets/stylesheets/mkt/_topo.scss
@@ -67,6 +67,10 @@
 		text-transform: uppercase;
 		font-weight: bold;
 	}
+	h1#countdown{
+		font-size: 25pt;
+		text-transform: none;
+	}
 	.s1{
 		margin-top: 10px;
 	}
