--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 	  <div class="row">
 	    <div class="large-5 columns">
 	    <div class="s1">
-	      <h1>Viajar</h1>
+	     <%= data_restante.html_safe %>
 	      <p>
 	        É a única coisa  que
 	      </p>
