--- a/app/views/layouts/mkt.html.erb
+++ b/app/views/layouts/mkt.html.erb
@@ -22,16 +22,49 @@
     
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>  
+
   
   <%= javascript_include_tag "mkt" %>
+  
+
+
   <script type="text/javascript">
+
+ function datas(name,node){
+    var days, hours, minutes, seconds;
+    var target_date = name;
+    var countdown = node;
+    var current_date = new Date().getTime();
+    var seconds_left = (target_date - current_date) / 1000;
+
+    days = parseInt(seconds_left / 86400);
+    seconds_left = seconds_left % 86400;
+     
+    hours = parseInt(seconds_left / 3600);
+    seconds_left = seconds_left % 3600;
+      
+    minutes = parseInt(seconds_left / 60);
+    seconds = parseInt(seconds_left % 60);
+
+    // format countdown string + set tag value
+    
+    countdown.innerHTML = days + "d, " + hours + "h, "
+    + minutes + "m, " + seconds + "s"; 
+  } 
+
     $(document).ready(function() {
       var pepe = $.fn.fullpage({
         anchors: ['home', 'servicos', 'sobre-nos', 'blog', 'guias'],
         menu: '#menu'
       });
-      
+      setInterval(function () {
+        datas($('#countdown').data().time,document.getElementById("countdown"));
+      }, 1000);
     });
+
+
+
+    
   </script>
 
 </head>
