--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,13 @@
 </div>
 <div class="section home-bg"></div>
 <div class="section">
-	<h1>Titulo Sobre</h1>
+	<div class='sp'>
+		<div class="row">
+			<div class="large-5 columns">
+				 <h1 data-scrollreveal="enter from the top over 1.5s">scrollReveal.js</h1>
+			</div>
+		</div>
+	</div>
 </div>
 <div class="section"></div>
 <div class="section"></div>
