--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *= require foundation_and_overrides
  *= require font-awesome
  *= require jquery.ui.all
+ *= require select2
  *= require selectize
  *= require selectize.default
  *= require orca
