--- a/app/views/home/_topo.html.erb
+++ b/app/views/home/_topo.html.erb
@@ -1,4 +1,4 @@
-<div class="section-topo">
+<div class="section-topo" data-magellan-expedition="fixed">
   <div class="row">
     <div class="large-5 medium-5 small-5 columns">
       <div class="nav-top">
