Api Proximo Embarque e Formulário

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,6 +29,7 @@
 		<div class="row">
 			<div class="large-6 columns">
 				<h1>Teste</h1>
+				  {{ formData }}
 			</div>
   			<div class="large-6 columns oc" data-scroll-reveal="enter right after 0.5s">
 				<%= render :partial => "form" %>
