--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,52 +1,83 @@
 
-    <form class='orcamento-online'>
+    <%= form_tag "", class: "orcamento-online", :'ng-submit' => 'processForm()' do |f| %>
+
+
+
+      <div class="step1">
       <div class="row">
         <div class="large-12 columns">
           <h4>Orçamento <span>Online</span></h4>
         </div>
         <div class="large-12 columns left">
           <input id="checkbox1" type="radio"><label for="checkbox1">Ida e Volta</label>
+
           <input id="checkbox2" type="radio"><label for="checkbox2">Somente ida</label>
 
         </div>
 
         <div class="large-6 columns">
           <label>Origem </label>
-          <input type="text" placeholder="Origem" />
+          <%= text_field_tag "Origem", "", 
+            :'ng-model' => 'formData.origem',
+            :placeholder => 'Origem' 
+          %>
+
 
         </div>
         <div class="large-6 columns">
           <label>Destino</label>
-          <input type="text" placeholder="Destino" />
-
+          <%= text_field_tag "Destino", "", 
+            :'ng-model' => 'formData.destino',
+            :placeholder => 'Destino' 
+          %>
         </div>
       </div>
       <div class="row">
         <div class="large-6 columns">
           <label>Data Ida</label>
-          <input type="text" placeholder="Data Ida" />
+          <%= text_field_tag "dataida", "", 
+            :'ng-model' => 'formData.dataida',
+            :placeholder => '00/00/0000' 
+          %>
         </div>
         <div class="large-6 columns left">
           <label>Data Volta</label>
-          <input type="text" placeholder="Data Volta" />
+          <%= text_field_tag "Data Volta", "", 
+            :'ng-model' => 'formData.datavolta',
+            :placeholder => '00/00/0000' 
+          %>
         </div>
 
       </div>
       <div class="row">
         <div class="large-3 columns left">
          <label>Adultos: </label> 
-         <input type="text" placeholder="Adultos" />
+          <%= text_field_tag "Data Volta", "", 
+            :'ng-model' => 'formData.adultos',
+            :placeholder => '0-10' 
+          %>
        </div>
        <div class="large-3 columns left">
          <label>Crianças: </label> 
-         <input type="text" placeholder="Crianças" />
+          <%= text_field_tag "Data Volta", "", 
+            :'ng-model' => 'formData.criancas',
+            :placeholder => '0-10' 
+          %>
        </div>
        <div class="large-3 columns left">
         <label>Bebês: </label>
-        <input type="text" placeholder="Bebês" />
+          <%= text_field_tag "Data Volta", "", 
+            :'ng-model' => 'formData.bebes',
+            :placeholder => '0-10' 
+          %>
       </div>
       <div class="large-3 columns left">
        <input type="submit" class="button tiny font13" value="Enviar"  />
      </div>
    </div>
- </form>
+   </div>
+   <div class="step2" style="display:none;">
+   </div>
+ <% end %>
+
+  
