--- a/app/views/home/_topo.html.erb
+++ b/app/views/home/_topo.html.erb
@@ -3,17 +3,17 @@
     <div class="large-5 medium-5 small-5 columns">
       <div class="nav-top">
         <ul id="top-menu">
-          <li data-menuanchor="home">
+          <li data-menuanchor="home" data-magellan-arrival="home" class="active">
             <a href="#home">Inicio</a>
           </li>
-          <li data-menuanchor="servicos">
-            <a href="#servicos">Serviços</a>
+          <li data-menuanchor="servicos" data-magellan-arrival="servicos">
+            <a data-scrol href="#servicos">Serviços</a>
           </li>
-          <li data-menuanchor="sobre-nos" >
-            <a href="#sobre-nos" >Sobre-nós</a>
+          <li data-menuanchor="sobre" data-magellan-arrival="sobre"  >
+            <a data-scrol href="#sobre" >Sobre-nós</a>
           </li>
-          <li data-menuanchor="blog">
-            <a href="#blog">Blog</a>
+          <li data-menuanchor="blog" data-magellan-arrival="blog" >
+            <a data-scrol href="#blog">Blog</a>
           </li>
         </ul>
       </div>
@@ -26,10 +26,10 @@
       <div class="nav-top">
         <ul class="menu">
           <li data-menuanchor="guias">
-            <a href="#guias">Guias</a>
+            <a data-scrol href="#guias">Guias</a>
           </li>
           <li>
-            <a href="#">Hoteis</a>
+            <a data-scrol href="#">Hoteis</a>
           </li>
           <li>
             <a href="#">Promoções</a>
