--- a/app/assets/stylesheets/mkt.css
+++ b/app/assets/stylesheets/mkt.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require font_lane
+ *= require jquery.ui.datepicker
  *= require foundation_and_overrides
  *= require orca
  */
