--- a/app/views/layouts/mkt.html.erb
+++ b/app/views/layouts/mkt.html.erb
@@ -25,7 +25,7 @@
 
 <%= csrf_meta_tags %>
 </head>
-<body ng-app="formApp" ng-controller="formController" >
+<body  >
 
 <%= yield %>
 <%= javascript_include_tag "mkt" %>
@@ -47,7 +47,7 @@
     $( document ).ready(function() {
         $('.animado').show();
     });
-    
+  
 </script>
 </body>
 </html>
