--- a/app/assets/stylesheets/mkt/_resposive.scss
+++ b/app/assets/stylesheets/mkt/_resposive.scss
@@ -6,6 +6,18 @@
 
 
 // XXLarge screens
-@media only screen and (min-width: 120.063em) { 
+@media only screen and (min-width: 93.750em) { 
 
+	.section-head {
+		h1#countdown{
+			font-size: 28pt;
+			text-transform: none;
+		}
+		.sp{
+			h1{
+				text-align: center;
+				font-size: 30pt;
+			}
+		}
+	}
 } /* min-width 1921px, xlarge screens */
